Bug 818721 - Downloads panel footer overlaps panel border. r=mconley
UltraBlame original commit: bfb383743f7d36e3eb7215b2a0b019de0a48b42b

--- a/browser/themes/winstripe/downloads/downloads-aero.css
+++ b/browser/themes/winstripe/downloads/downloads-aero.css
@@ -21,23 +21,6 @@ default
 theme
 )
 {
-#
-downloadsPanel
-[
-hasdownloads
-]
->
-#
-downloadsFooter
-{
-background
--
-color
-:
-#
-f1f5fb
-;
-}
 richlistitem
 [
 type
